<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_settings_add_feed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:padding="@dimen/padding_item"
        android:text="@string/settings_add_source_name"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed"

        />

    <EditText
        android:id="@+id/et_settings_add_feed_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_settings_add_feed_name"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:layout_toRightOf="@id/tv_settings_add_feed_name"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:inputType="text"
        android:padding="@dimen/padding_item"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed"

        />


    <TextView
        android:id="@+id/tv_settings_add_feed_url"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/tv_settings_add_feed_name"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"

        android:alpha="0.87"
        android:fontFamily="Roboto Medium"

        android:gravity="center"
        android:padding="@dimen/padding_item"
        android:text="@string/settings_add_source_url"

        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed" />

    <EditText
        android:id="@+id/et_settings_add_feed_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_settings_add_feed_url"
        android:layout_below="@id/et_settings_add_feed_name"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:layout_toRightOf="@id/tv_settings_add_feed_url"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:inputType="textUri"
        android:padding="@dimen/padding_item"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed" />


    <TextView
        android:id="@+id/tv_settings_add_feed_category"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@id/tv_settings_add_feed_url"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"

        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:padding="@dimen/padding_item"
        android:text="@string/settings_add_source_category"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed"

        />

    <AutoCompleteTextView
        android:id="@+id/actv_settings_add_feed_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_settings_add_feed_category"
        android:layout_below="@id/et_settings_add_feed_url"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:layout_toRightOf="@id/tv_settings_add_feed_category"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:inputType="text"
        android:padding="@dimen/padding_item"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed"

        />

    <TextView
        android:id="@+id/tv_settings_add_feed_use_feed"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/tv_settings_add_feed_category"

        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:padding="@dimen/padding_item"
        android:text="@string/settings_add_source_use"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed"

        />

    <CheckBox
        android:id="@+id/cb_settings_add_feed_use_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_settings_add_feed_use_feed"
        android:layout_alignParentRight="true"
        android:layout_below="@id/actv_settings_add_feed_category"
        android:layout_marginBottom="@dimen/margin_add_feed"
        android:layout_marginTop="@dimen/margin_add_feed"
        android:alpha="0.87"
        android:fontFamily="Roboto Medium"
        android:gravity="center"
        android:padding="@dimen/padding_item"
        android:textColor="#000000"
        android:textSize="@dimen/font_add_feed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_settings_add_feed_use_feed"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_settings_add_feed" />


</RelativeLayout>